# pkzo

./: .gitattributes  .gitignore  BuildSDK.bat  CMakeLists.txt  CMakePresets.json  ChangeLog.md  Doxyfile  LICENSE.txt  README.md  defaults.props  ice.sln  packsdk.bat  pkzo.sln  pkzoConfig.cmake.in  run-all-tests.bat  vcpkg.json
.github/: pull_request_template.md
.props/: debug.props  defaults.props  release.props
cmake/: pkzoConfig.cmake.in
ext/: README.md
glow/: FrameBuffer.cpp  FrameBuffer.h  Parameters.cpp  Parameters.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  defines.h  glow.cpp  glow.h  glow.vcxproj  glow.vcxproj.filters  pch.cpp  pch.h
glow-test/: frame_buffer_test.cpp  glow-test.vcxproj  glow-test.vcxproj.filters  main.cpp  opengl_test.cpp  pch.h  pipeline_test.cpp
glslgen/: glslgen.cpp  glslgen.vcxproj  glslgen.vcxproj.filters
glt/: README.md  glt.c  glt.h  glt.vcxproj  glt.vcxproj.filters
ice/: AmbientLight.cpp  AmbientLight.h  Asset.cpp  Asset.h  AssetLibrary.cpp  AssetLibrary.h  BoxVisual.cpp  BoxVisual.h  Camera.cpp  Camera.h  ConsoleSystem.cpp  ConsoleSystem.h  DirectionalLight.cpp  DirectionalLight.h  Engine.cpp  Engine.h  Font.cpp  Font.h  Forward_Emissive.glsl  Forward_SolidGeometry.glsl  Forward_Unlit.glsl  GraphicSystem.cpp  GraphicSystem.h  HitArea.cpp  HitArea.h  InputSystem.cpp  InputSystem.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Mouse.cpp  Mouse.h  Node.h  (+77 more)
ice-lab/: EditorScreen.cpp  EditorScreen.h  LabEngine.cpp  LabEngine.h  MainMenu.cpp  MainMenu.h  Pawn.cpp  Pawn.h  SettingsMenu.cpp  SettingsMenu.h  StaticBox.cpp  StaticBox.h  ice-lab.vcxproj  ice-lab.vcxproj.filters  main.cpp  pch.cpp  pch.h  settings.json
ice-test/: MockGraphicSystem.h  MockRenderer.h  engine_tests.cpp  glm_checks.h  ice-test.vcxproj  ice-test.vcxproj.filters  ice-test.vcxproj.filters.orig  main.cpp  pch.h  test_ambient_light.cpp  test_asset_library.cpp  test_box_visual.cpp  test_button.cpp  test_camera.cpp  test_console.cpp  test_directional_light.cpp  test_engine.cpp  test_env.cpp  test_env.h  test_font.cpp  test_graphic_system.cpp  test_graphic_system.cpp.orig  test_hit_area.cpp  test_input_system.cpp  test_label.cpp  test_material.cpp  test_mesh.cpp  test_opengl_renderer.cpp  test_scene.cpp  test_scene_node.cpp  test_scene_node_group.cpp  test_scene_rendering.cpp  test_screen.cpp  test_screen_node.cpp  test_screen_node_group.cpp  test_settings.cpp  test_state_machine.cpp  test_stats.cpp  test_strex.cpp  test_text.cpp  (+8 more)
ice-ui/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  HorizontalLayout.cpp  HorizontalLayout.h  Label.cpp  Label.h  Layout.cpp  Layout.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  PopupMenu.cpp  PopupMenu.h  Style.cpp  Style.h  TableLayout.cpp  TableLayout.h  VerticalLayout.cpp  VerticalLayout.h  Widget.cpp  Widget.h  config.h  ice-ui.h  ice-ui.vcxproj  ice-ui.vcxproj.filters  pch.cpp  pch.h
inc/: glm_2d.h  glm_fkyaml.h  glm_gtest.h  glm_io.h  glm_json.h  pkzo_gtest.h  test_env.h
include/: pkzo.h  pkzosg.h  pkzoui.h
lab/: EditorScreen.cpp  EditorScreen.h  LabEngine.cpp  LabEngine.h  Pawn.cpp  Pawn.h  StaticBox.cpp  StaticBox.h  lab.vcxproj  lab.vcxproj.filters  main.cpp  pch.h
pbrmat/: MaterialEditor.cpp  MaterialEditor.h  TestScene.cpp  TestScene.h  pbrmat.vcxproj  pbrmat.vcxproj.filters
pkoz-test/: main.cpp  pkoz-test.vcxproj  pkoz-test.vcxproj.filters  test_event_router.cpp
pkzo-imgui/: Interface.cpp  Interface.h  defines.h  imgui_impl_pkzo.cpp  imgui_impl_pkzo.h  pch.h  pkzo-imgui.h  pkzo-imgui.vcxproj  pkzo-imgui.vcxproj.filters
pkzo-lab/: App.cpp  App.h  Application.cpp  Application.h  DebugOverlay.cpp  DebugOverlay.h  MainMenu.cpp  MainMenu.h  MaterialTestScene.cpp  MaterialTestScene.h  Pawn.cpp  Pawn.h  PhysicsTestScene.cpp  PhysicsTestScene.h  Prop.cpp  Prop.h  RenderTest.cpp  RenderTest.h  Settings.cpp  Settings.h  SettingsMenu.cpp  SettingsMenu.h  StateMachine.h  env.cpp  env.h  main.cpp  pkzo-lab.vcxproj  pkzo-lab.vcxproj.filters
pkzo-test/: DebugMonitor.cpp  DebugMonitor.h  MockGraphicSystem.h  MockRenderer.h  ambient_light_test.cpp  box_geometry_test.cpp  box_test.cpp  button_test.cpp  camera_test.cpp  directional_light_test.cpp  engine_test.cpp  enum_tests.cpp  event_router_test.cpp  font_test.cpp  glm_checks.h  glm_gtest.h  glmtest.h  group_test.cpp  hitarea_test.cpp  image_test.cpp  keyboard_test.cpp  light_test.cpp  main.cpp  main_test.cpp  mass_test.cpp  material_test.cpp  mouse_test.cpp  pch.cpp  pch.h  physics_test.cpp  pkzo-test.vcxproj  pkzo-test.vcxproj.filters  pkzo_gtest.h  pkzo_test.h  pysics_mock.h  renderer_test.cpp  scene_node_group_test.cpp  scene_node_test.cpp  scene_renderer_test.cpp  scene_test.cpp  (+59 more)
pkzo-three/: AmbientLight.cpp  AmbientLight.h  Box.cpp  Box.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  Phong.frag.glsl  Phong.vert.glsl  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneGroup.cpp  SceneGroup.h  SceneNode.cpp  SceneNode.h  SceneNodeGroup.cpp  SceneNodeGroup.h  SceneRenderer.cpp  SceneRenderer.h  Sphere.cpp  Sphere.h  SpotLight.cpp  SpotLight.h  pch.h  pkzo-three.h  pkzo-three.rc  pkzo-three.vcxproj  pkzo-three.vcxproj.filters  resource.h
pkzo-three-test/: box_test.cpp  light_test.cpp  material_test.cpp  pch.h  pkzo-three-test.vcxproj  pkzo-three-test.vcxproj.filters  scene_node_group_test.cpp  scene_node_test.cpp  scene_renderer_test.cpp  scene_test.cpp
pkzo-tree-test/: main.cpp  pch.h  pkzo-tree-test.vcxproj  pkzo-tree-test.vcxproj.filters  scene_renderer_test.cpp
pkzo-two/: HitArea.cpp  HitArea.h  Screen.h  (+18 more)
pkzo-two-test/: pch.h  pkzo-two-test.vcxproj  pkzo-two-test.vcxproj.filters  text_test.cpp
pkzo-two-ui/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  DropDownMenu.cpp  DropDownMenu.h  Menu.cpp  Menu.h  Slider.cpp  Slider.h  config.h  pch.h  pkzo-two-ui.h  pkzo-two-ui.vcxproj  pkzo-two-ui.vcxproj.filters
(+860 files in other folders)
